--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "",
   "version": "",
+  "scripts": {
+  },
   "devDependencies": {
     "babel-preset-es2015": "^6.13.2",
     "browser-sync": "^2.14.0",
@@ -11,9 +13,14 @@
     "gulp-concat": "^2.6.1",
     "gulp-copy": "^1.0.0",
     "gulp-inject": "^4.2.0",
+    "gulp-pug": "^3.2.0",
     "gulp-sass": "^2.3.2",
     "gulp-svg-symbols": "^2.0.2",
-    "gulp-svgmin": "^1.2.3",
+    "gulp-svgmin": "^1.2.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "gulp-install": "^0.6.0"
+  }
 }
+
+
